--- a/src/main/resources/pages/datasource.html
+++ b/src/main/resources/pages/datasource.html
@@ -103,7 +103,7 @@
             </el-form-item>
             <el-form-item label="实体名称" label-width="130px" prop="models">
                 <el-input v-model="config.models" maxlength="100" clearable
-                          placeholder="实体名称,该大写的大写，不做转换,例如：ErpAppOrder"></el-input>
+                          placeholder="实体名称，该大写的大写，不做转换，例如：ErpAppOrder"></el-input>
             </el-form-item>
             <el-form-item label="xml所在项目" label-width="130px" prop="xmlProject">
                 <el-input v-model="config.xmlProject" maxlength="100" clearable
