数据库初始脚本

--- a/src/main/resources/pages/datasource.html
+++ b/src/main/resources/pages/datasource.html
@@ -165,10 +165,10 @@
                 <el-table-column prop="tables" label="数据表" align="center"></el-table-column>
                 <el-table-column label="操作" align="center">
                     <template scope="scope">
-                        <el-button type="text" size="small" @click="pj(scope.row.id)">项目地址</el-button>
-                        <el-button type="text" size="small" @click="product(scope.row.id)">生成</el-button>
                         <el-button type="text" size="small" @click="editCf(scope.row.id)">编辑</el-button>
                         <el-button type="text" size="small" @click="delCf(scope.row.id)">删除</el-button>
+                        <el-button type="text" size="small" @click="pj(scope.row.id)">项目目录</el-button>
+                        <el-button type="text" size="small" @click="product(scope.row.id)">生成</el-button>
                     </template>
                 </el-table-column>
             </el-table>
